http_src/views/private/clients/dark-mode.scss
/* ... */
html,
body,
#particles-js {
    background-color: #1a1a1a !important;
    color: #e0e0e0 !important;
}

input {
    color: #E2E2E2;
}

code {
    color: #F8F8F2 !important;
}

.btn-warning {
    color: #000000 !important;
}

.graph-val-total-title,
.graph-val-95percentile-title,
.graph-val-average-title,
.graph-val-max-title,
.graph-val-total {
    border-color: #2C2C2C !important;
}

.ntop_notes {
    color: #FFFFFF;
}

.leaflet-top.leaflet-left {
    z-index: auto;
}

.btn-primary {
    color: #000000;
    background-color: var(--ntop-orange);
    border-color: var(--ntop-orange);
}

.btn-primary:hover {
    color: #000000;
    background-color: #FFA026;
    border-color: #FF9A1A;
}

.btn-check:focus+.btn-primary,
.btn-primary:focus {
    color: #000000;
    background-color: #FFA026;
    border-color: #FF9A1A;
    box-shadow: 0 0 0 0.25rem #D97A0080;
}

.btn-check:checked+.btn-primary,
.btn-check:active+.btn-primary,
.btn-primary:active,
.btn-primary.active,
.show>.btn-primary.dropdown-toggle {
    color: #000000;
    background-color: #FFA533;
    border-color: #FF9A1A;
}

.btn-check:checked+.btn-primary:focus,
.btn-check:active+.btn-primary:focus,
.btn-primary:active:focus,
.btn-primary.active:focus,
.show>.btn-primary.dropdown-toggle:focus {
    box-shadow: 0 0 0 0.25rem #D97A0080;
}

.btn-primary:disabled,
.btn-primary.disabled {
    color: #000000;
    background-color: var(--ntop-orange);
    border-color: var(--ntop-orange);
}

.btn-secondary {
    color: #FFFFFF;
    background-color: var(--ntop-blue);
    border-color: var(--ntop-blue);
}

.btn-secondary:hover {
    color: #FFFFFF;
    background-color: #2F3C43;
    border-color: #2C393F;
}

.btn-check:focus+.btn-secondary,
.btn-secondary:focus {
    color: #FFFFFF;
    background-color: #2F3C43;
    border-color: #2C393F;
    box-shadow: 0 0 0 0.25rem rgba(85, 99, 105, 0.5);
}

.btn-check:checked+.btn-secondary,
.btn-check:active+.btn-secondary,
.btn-secondary:active,
.btn-secondary.active,
.show>.btn-secondary.dropdown-toggle {
    color: #FFFFFF;
    background-color: #212529;
    border-color: #29353B;
}

.btn-check:checked+.btn-secondary:focus,
.btn-check:active+.btn-secondary:focus,
.btn-secondary:active:focus,
.btn-secondary.active:focus,
.show>.btn-secondary.dropdown-toggle:focus {
    box-shadow: 0 0 0 0.25rem rgba(85, 99, 105, 0.5);
}

.btn-secondary:disabled,
.btn-secondary.disabled {
    color: #FFFFFF;
    background-color: var(--ntop-blue);
    border-color: var(--ntop-blue);
}

.alert-primary {
    color: #995600;
    background-color: #FFE9CC;
    border-color: #FFDDB3;
}

.alert-primary .alert-link {
    color: #7A4500;
}

.alert-secondary {
    color: #212B2F;
    background-color: #D7DADC;
    border-color: #C3C8CA;
}

.alert-secondary .alert-link {
    color: #1A2226;
}

.list-group-item-primary {
    color: #995600;
    background-color: #FFE9CC;
}

.list-group-item-primary.list-group-item-action:hover,
.list-group-item-primary.list-group-item-action:focus {
    color: #995600;
    background-color: #E6D2B8;
}

.list-group-item-primary.list-group-item-action.active {
    color: #FFFFFF;
    background-color: #995600;
    border-color: #995600;
}

.list-group-item-secondary {
    color: #212B2F;
    background-color: #D7DADC;
}

.list-group-item-secondary.list-group-item-action:hover,
.list-group-item-secondary.list-group-item-action:focus {
    color: #212B2F;
    background-color: #C2C4C6;
}

.list-group-item-secondary.list-group-item-action.active {
    color: #FFFFFF;
    background-color: #212B2F;
    border-color: #212B2F;
}

.link-primary {
    color: var(--ntop-orange);
}

.link-primary:hover,
.link-primary:focus {
    color: #FFA533;
}

.link-secondary {
    color: var(--ntop-blue);
}

.link-secondary:hover,
.link-secondary:focus {
    color: #2C393F;
}

.border-primary {
    border-color: var(--ntop-orange) !important;
}

.border-secondary {
    border-color: var(--ntop-blue) !important;
}

.text-primary {
    color: var(--ntop-orange) !important;
}

.text-secondary {
    color: var(--ntop-blue) !important;
}

.pie-chart {
    background-color: transparent !important;
}

svg:not(.leaflet-zoom-animated) {
    color: #EEEEEE;
}

#ntop-logo>svg,
svg.peity {
    background: none;
}

a,
.btn-link {
    color: #FF8A26;
}

a:hover,
.btn-link:hover {
    color: #F39F55;
}

.btn:hover {
    color: #D6D6D6;
}

.btn-light {
    color: #EEEEEE;
    background-color: #232323;
    border-color: #272727;
}

.btn-light:hover {
    color: #EEEEEE;
    background-color: #333333;
    border-color: #272727;
}

.btn-light:not(:disabled):not(.disabled).active,
.btn-light:not(:disabled):not(.disabled):active,
.show>.btn-light.dropdown-toggle {
    color: #EEEEEE;
    background-color: #212529;
    border-color: #272727;
}

.dropdown-header {
    color: #9A9A9A;
}

.dropdown-divider {
    border-top: 1px solid #0A0A0A;
}

.bg-primary {
    background-color: #FF8A26 !important;
}

.bg-light,
.card {
    background-color: #212529 !important;
    border-color: transparent !important;
    color: #E2E2E2 !important;
}

.bg-white {
    background-color: #212529 !important;
    color: #E2E2E2;
}

.bg-black {
    background-color: #EEEEEE !important;
}

.info-stats a {
    color: #E2E2E2 !important;
}

.navbar-light,
.navbar-light .navbar-brand,
ul.navbar-nav li.nav-item>a {
    color: #E2E2E2 !important;
}

.nav-pills .nav-link.active,
.nav-pills .show>.nav-link {
    background-color: #FF7500;
}

.nav-link {
    color: #FFFFFF80 !important;
}

.extrainfo {
    position: absolute;
    z-index: 1;
    border-radius: 4px;
    left: 8px;
    top: 8px;
    padding: 8px;
    background: #00000080;
}

ul.navbar-nav li.nav-item.active,
ul.navbar-nav li.nav-item.active>a.active {
    color: #E9E9E9 !important;
    font-weight: 600;
}

.breadcrumb {
    background-color: #0d1117 !important;
}

.breadcrumb-item.active {
    color: #A2A2A2;
}
/* ... */

